# 163MusicLyric

./: .gitignore  CMakeLists.txt  CloudMusicLyrics.slnx
version/: Config.h  Lyric.cpp  Lyric.h  MusicHook.cpp  MusicHook.h  NetClient.cpp  NetClient.h  Render.cpp  Render.h  Taskbar.cpp  Taskbar.h  Utils.h  dllmain.cpp  version.def  version.vcxproj  version.vcxproj.filters
version/Hijack/: version.h
